accessibility fixes color contrast

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -997,7 +997,7 @@ $panel-bg: scale-color($sand, $lightness: 15%);
 // $panel-padding: rem-calc(20);
 
 // We use these to set default font colors
-$panel-font-color: $dark-gold;
+$panel-font-color: scale-color($dark-gold, $lightness:-20%);
 // $panel-font-color-alt: $white;
 
 // $panel-header-adjust: true;
